--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: environment
+      run: |
+        python -m pip install --upgrade pip
+        pip3 install numpy
+
     - name: Compile and run minipic
       run: |
         cd tests
