--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -28,11 +28,33 @@ jobs:
         cd sequential
         python run.py -c g++ -g sequential
 
+  openmp:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: environment
+      run: |
+        python -m pip install --upgrade pip
+        pip3 install numpy
+
     - name: Compile and run minipic openmp loop
       run: |
         cp -r tests openmp_loop
         cd openmp_loop
         python run.py -c g++ -g openmp
+
+  openmp_task:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: environment
+      run: |
+        python -m pip install --upgrade pip
+        pip3 install numpy
 
     - name: Compile and run minipic openmp task
       run: |
