--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -55,6 +55,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip3 install numpy
+        sudo apt-get update g++
 
     - name: Compile and run minipic openmp task
       run: |
