--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -55,11 +55,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip3 install numpy
-        # sudo apt-get install g++-13
-        clang++ --version
+        sudo apt-get install g++-13
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 13
 
     - name: Compile and run minipic openmp task
       run: |
         cp -r tests openmp_task
         cd openmp_task
-        python run.py -c clang++ -g openmp_task
+        python run.py -c g++ -g openmp_task
