--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -45,21 +45,21 @@ jobs:
         cd openmp_loop
         python run.py -c g++ -g openmp
 
-  openmp_task:
-    runs-on: ubuntu-latest
+#   openmp_task:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v4
+#     steps:
+#     - uses: actions/checkout@v4
 
-    - name: environment
-      run: |
-        python -m pip install --upgrade pip
-        pip3 install numpy
-        sudo apt-get install g++-13
-        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 13
+#     - name: environment
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip3 install numpy
+#         sudo apt-get install g++-13
+#         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 13
 
-    - name: Compile and run minipic openmp task
-      run: |
-        cp -r tests openmp_task
-        cd openmp_task
-        python run.py -c g++ -g openmp_task
+#     - name: Compile and run minipic openmp task
+#       run: |
+#         cp -r tests openmp_task
+#         cd openmp_task
+#         python run.py -c g++ -g openmp_task
