try to add eventify

--- a/.github/workflows/minipic.yml
+++ b/.github/workflows/minipic.yml
@@ -63,3 +63,28 @@ jobs:
 #         cp -r tests openmp_task
 #         cd openmp_task
 #         python run.py -c g++ -g openmp_task
+
+  eventify:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: environment
+      run: |
+        python -m pip install --upgrade pip
+        pip3 install numpy
+
+    - name: install eventify
+      run: |
+        wget https://code.fmsolvr.fz-juelich.de/ATML-CAP/ETS/archive/main.tar.gz
+        tar -xvf main.tar.gz
+        cmake -S eventify-source -B eventify-build -DCMAKE_INSTALL_PREFIX=eventify-install -DCMAKE_BUILD_TYPE=Release
+        cmake --build eventify-build --config Release --target install --parallel
+        export Eventify_DIR=$PWD/eventify-install/
+
+    - name: Compile and run minipic eventify
+      run: |
+        cp -r tests eventify
+        cd eventify
+        python run.py -c g++ -g eventify
